--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </nav>
     </header>
 
+    <!-- home section start-->
     <section class="home">
       <div class="home-content">
         <h1>Hi, I'm Robby Ilham.</h1>
@@ -44,5 +45,6 @@
 
       <span class="home-imgHover"></span>
     </section>
+    <!-- home section end-->
   </body>
 </html>
