--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio Website HTML CSS Only | Codehal</title>
     <link rel="stylesheet" href="style.css" />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet" />
   </head>
 
   <body>
@@ -28,8 +29,15 @@
         <h1>Hi, I'm Robby Ilham.</h1>
         <h3>Fullstack Developer</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi deleniti consequatur, quam exercitationem voluptatum architecto quo numquam amet accusamus recusandae quidem, perspiciatis in voluptas esse optio, harum aspernatur.
-          Numquam, nostrum?
+          I'm currently working at a boarding school in Jakarta as an IT
+          supporter and God willing, I'm continuing my postgraduate studies at
+          one of the private campuses in Jakarta. And I'm also learning
+          programming languages ​​and new technologies in the IT world. I am a
+          person who likes to learn new things and ready to work individually
+          and in a team. I come from and was born in Bandung, West Java, once
+          studied at a private university there. For complete biodata I include
+          below. git aI'm currently studying Web Developer (HTML, CSS, PHP, JS, etc.)
+          and Mobile Developer (Java, Flutter, Dart, etc.).
         </p>
         <div class="btn-box">
           <a href="#">Hire Me</a>
