--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           person who likes to learn new things and ready to work individually
           and in a team. I come from and was born in Bandung, West Java, once
           studied at a private university there. For complete biodata I include
-          below. git aI'm currently studying Web Developer (HTML, CSS, PHP, JS, etc.)
+          below. I'm currently studying Web Developer (HTML, CSS, PHP, JS, etc.)
           and Mobile Developer (Java, Flutter, Dart, etc.).
         </p>
         <div class="btn-box">
@@ -46,9 +46,11 @@
       </div>
 
       <div class="home-sci">
-        <a href="#"><i class="bx bxl-facebook"></i></a>
-        <a href="#"><i class="bx bxl-twitter"></i></a>
-        <a href="#"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100034931260218"><i
+            class="bx bxl-facebook"></i></a>
+        <a href="https://github.com/robbytrujillo/"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/robby-ilhamkusuma-b9b601168/"><i
+            class="bx bxl-linkedin"></i></a>
       </div>
 
       <span class="home-imgHover"></span>
